Sutter Health/src/objects/Call_Back__c.object
<CustomObject>
    <description>Comments to create CaseComment records.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call answered</fullName>
                </value>
                <value>
                    <fullName>Call back required</fullName>
                </value>
                <value>
                    <fullName>Call not answered</fullName>
                </value>
                <value>
                    <fullName>Left voice message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCommentID__c</fullName>
        <description>This field will keep CaseComment record id.</description>
        <label>CaseCommentID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Review_Comments__c</fullName>
        <label>Clinical Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concurrent_Retro_Comments__c</fullName>
        <label>Concurrent/Retro Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concurrent_Review_Received_Date__c</fullName>
        <description>Date concurrent review was received.</description>
        <label>Concurrent Review Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concurrent_Review_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>REQ 3262 Care management input page</description>
        <label>Concurrent Review Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concurrent_Review_Requested_Date__c</fullName>
        <description>Date request was sent to hospital.</description>
        <label>Concurrent Review Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concurrent_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark if request was sent to hospital</description>
        <label>Concurrent Review Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Who CMC called – may be different from initial caller</description>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outbound_Call_Date_Time__c</fullName>
        <description>Date and Time in which outbound call was placed.</description>
        <label>Outbound Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Call_Backs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Requested_Facesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CMC to request only if Transfer Center did not provide/forward.</description>
        <label>Requested Facesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retro_Already_Discharged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark if patient has been discharged.</description>
        <label>Retro: Already Discharged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Call Backs</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiry Comments</pluralLabel>
    <recordTypes>
        <fullName>Comments_Grievance</fullName>
        <active>true</active>
        <description>Customer Inquiry Comments recordtype for Grievance SRs</description>
        <label>Comments Grievance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comments_OOA_OON</fullName>
        <active>true</active>
        <description>Comments for OOA/OON SR</description>
        <label>Comments OOA OON</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>